--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,10 +77,9 @@
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="fCRQGRdsEz9gG1sOkOW1oZtCGhlSDVGP" />
-
         <meta-data
             android:name="com.amap.api.v2.apikey"
-            android:value="2da223bb6f1dc069d0bb68ac39963290"/>
+            android:value="2da223bb6f1dc069d0bb68ac39963290" />
 
         <service
             android:name="com.baidu.location.f"
@@ -105,6 +104,7 @@
         <activity
             android:name=".FriendDetailsActivity"
             android:theme="@style/FriendDetailsActivityTheme" />
+        <activity android:name=".LabActivity"></activity>
     </application>
 
 </manifest>
