--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'me.tatarka.retrolambda'
 android {
     compileSdkVersion 25
-    buildToolsVersion '26.0.0 rc2'
+    buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "com.cxsj.runhdu"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 5
-        versionName "1.2.0"
+        versionCode 6
+        versionName "1.2.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -24,6 +24,7 @@ android {
         }
     }
 
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -37,24 +38,26 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'jp.wasabeef:glide-transformations:2.0.2'
     compile 'com.android.support:design:25.3.1'
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.squareup.okhttp3:okhttp:3.7.0'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.8.9'
-    compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.15'
     compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:gridlayout-v7:25.3.1'
     compile 'org.litepal.android:core:1.5.1'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.github.dmytrodanylyk:android-morphing-button:98a4986e56'
+	testCompile 'junit:junit:4.12'
 }
+
 repositories {
     mavenCentral()
 }
